[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anms-ace"
version = "1.0.0"
authors = [
  { name="Amanda Voegtlin", email="amanda.voegtlin@jhuapl.edu" },
  { name="Brian Sipos", email="brian.sipos@jhuapl.edu" },
]
description = "ADM CODEC Engine"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "cbor2",
  "PLY >= 3",
  "xdg",
  "sqlalchemy >= 1.3",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "coverage",
]
pylint = [
  "pylint",
  "pylint_junit",
]
flake8 = [
  "flake8",
  "flake8_pyproject",
  "flake8_formatter_junit_xml",
]
docs = [
  "sphinx <6",
  "sphinx_rtd_theme",
  "sphinx-argparse",
]

[tool.pylint.MAIN]
load-plugins="pylint_junit"
suggestion-mode="no"
[tool.pylint.FORMAT]
max-line-length=100
[tool.pylint.DESIGN]
min-public-methods=1

[tool.flake8]
max-line-length=100

[project.scripts]
ace_ari = "ace.tools.ace_ari:main"

[project.urls]
"Homepage" = "https://gitlab.jhuapl.edu/dtn/ace"
"Bug Tracker" = "https://gitlab.jhuapl.edu/dtn/ace"
